--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     margin: 0;
     padding: 0;
 }
+input::-webkit-input-placeholder{
+    color: #8E8E8E;
+    opacity: 0.3;
+}
 .vw1{
     font-size: 1;
 }
@@ -242,7 +246,7 @@
 /* NewStaffModal */
 
 .newStaffModalcontainer{
-  display: none;
+  display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -428,7 +432,7 @@
 
 /* add new department modal */
 .newdepartmentModalcontainer{
-  display: none;
+  display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -767,3 +771,379 @@
       align-items: center;
       cursor: pointer;
   }
+
+/* makepayment-2
+   */
+.makepaymentform2 {
+    width: 35vw;
+    height: 20vw;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.5%;
+}
+.makepaymentform2 > button {
+    width: 55%;
+    height: 20%;
+    color: white;
+    background-color: #D7B321;
+    border: none;
+    font-size: 1.25vw;
+    font-weight: 500;
+}
+.makepaymentform2>a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 55%;
+    height: 20%;
+    color: white;
+    background-color: #D7B321;
+    border: none;
+    font-size: 1.3vw;
+    font-weight: 500;
+}
+.recurring{
+    display: flex;
+    margin-top: 5%;
+    font-size: 1vw;
+}
+/* edit department */
+
+.newdepartmentmodaladdstaffbtns{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.editdepartmentmodaladdstaffbtns{
+    width: 20%;
+    height: 40%;
+    margin: 0 5%;
+    border: none;
+    color: white;
+    font-size: 1vw;
+    font-weight: 500;
+}
+/* edit staff */
+
+.newstaffmodaladdstaffbtns {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.editstaffmodaladdstaffbtns {
+    width: 30%;
+    height: 40%;
+    margin: 0 5%;
+    border: none;
+    color: white;
+    font-size: 1vw;
+    font-weight: 500;
+}
+
+/* memo */
+.memo-form {
+    width: 35vw;
+    min-height: 60vh;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 1.5%;
+    color: #A5A5A5;
+    font-size: 1.3vw;
+}
+.memo-items{
+    display: flex;
+}
+.memo-items > p{
+    width: 15%;
+}
+.memo-items > span{
+    margin-left: 6%;
+}
+.memo-items > textarea{
+    margin-left: 6%;
+    padding: 5%;
+    /* border: #A5A5A5; */
+    outline: #A5A5A5;
+}
+ .memo-items-button{
+    align-items: center;
+    justify-content: center;
+ }
+ .memo-items-button > button{
+   width: 30%;
+   height: 3vw;
+   margin: 0 3%;
+ }
+  #memo-accept{
+    background-color: #D7B321;
+    color: white;
+    border: #D7B321;
+   
+ }
+  #memo-accept:hover{
+    background-color: white;
+    color: #D7B321;
+    border: 1px solid #D7B321
+ }
+ #memo-decline{
+    background-color: white;
+    color: #D7B321;
+    border: 1px solid #D7B321
+ }
+ #memo-decline:hover{
+    background-color: #D7B321;
+    color: white;
+ }
+
+
+/* pricing */
+.pricingdiv{
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 3%;
+  width: 95vw;
+}
+
+.chooseaplanheading{
+   margin-top: 5vw;
+    margin-bottom: 5vw;
+    font-size: 3vw;
+     text-align: start;
+    --tw-text-opacity: 1;
+    color: rgb(195 33 49 / var(--tw-text-opacity));
+    font-weight: 700;
+}
+.plansDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.planDiv{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3vw;
+    border-radius: 0.5rem;
+    border: 1px solid #D1D1D14F;
+}
+.planDivPlanName{
+    font-size: 2.4vw;
+    color: #74747480;
+    font-weight: 500;
+     margin-top: 3vw;
+}
+.planDivPlanPrice{
+    background-color: #74747426;
+    color: #747474FF;
+    width: 70%;
+    font-weight: 700;
+     border-radius: 0.75rem/* 12px */;
+     font-size: 4.4vw;
+     margin-top: 3.3vw;
+     text-align: center;
+}
+
+.planDivbreakline{
+    margin-top: 3.3vw;
+    border: 1px solid #74747426;
+    width: 100;
+}
+.planDivCheckboxs{
+     margin-top: 3.3;
+     width: 70%;
+}
+
+.planDivCheckCircleDiv{
+    width: 100%;
+       display: flex;
+       justify-content: space-between;
+       color: #747474FF;
+       margin-top: 4%;
+        font-size: 2vw;
+        font-weight: 500;
+        align-items: center;
+}
+.plandivcheckboxtext{
+     width: 75%;
+}
+
+.choosePlanBtn{
+     margin-top: 4vw;
+    margin-bottom: 4vw;
+    font-size: 2.3vw;
+    font-weight: 700;
+    background-color: #747474FF;
+       width: 80%;
+          --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+       height: 4.1vw;
+       border: none;
+       cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    .plansDiv {
+        flex-direction: row;
+         flex-wrap: wrap;
+    }
+     .planDiv{
+        width: 40%;
+        margin-top: 1%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .chooseaplanheading{
+        font-size: 2vw;
+        padding-left: 8%;
+    }
+    .pricingdiv{
+        width: 80vw;
+    }
+     .plansDiv{
+        flex-wrap: nowrap;
+    }
+     .planDiv{
+        width: 22vw;
+        margin-right: 2%;
+        margin-top: 0;
+    }
+     .planDivPlanName{
+        font-size: 1.4vw;
+         margin-top: 2vw;
+    }
+      .planDivPlanPrice {
+        font-size: 3.4vw;
+          margin-top: 0;
+    }
+     .planDivbreakline{
+        margin-top: 2.3vw;
+    }
+    .planDivCheckboxs{
+        margin-top: 2.3vw;
+    }
+    .planDivCheckCircleDiv{
+        margin-top: 6%;
+          font-size: 1vw;
+    }
+     .choosePlanBtn{
+        margin-top: 3vw;
+        margin-bottom: 3vw;
+        font-size: 1.3vw;
+         height: 3.1vw;
+    }
+}
+
+/* Raise Memo */
+
+.raisememomain{
+    display: flex;
+}
+.raisememoDiv {
+    width: 70vw;
+    background-color: white;
+    margin: 12vh 5% 0;
+    display:flex;
+    flex-direction: column;
+    border: 1px solid #7070701D;
+    padding-bottom:2% ;
+}
+.raisememo{
+display: flex;
+align-items: center;
+padding: 1% 3%;
+}
+.raisememo > h1 {
+font-size: 16px;
+color: #D40E1F;
+font-weight: 700;
+}
+
+.raisememoformdiv{
+    padding: 1% 3%;
+    display: flex;
+    flex-direction: column;
+}
+.raiseMemolabel{
+    margin-top: 2%;
+    color: #A5A5A5;
+    font-size: 16px;
+}
+
+
+@media screen and (min-width:1440px){
+    .raisememo > h1{
+font-size: 18px;
+}
+.raiseMemolabel{
+    font-size: 18px;
+}
+}
+
+.payment-success{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 30%;
+    margin-bottom: 5%;
+    font-size: 1.3vw;
+    color: #A5A5A5;
+    font-weight: 600;
+}
+
+.raisememosubjectinput,.raisememouploadselect, .raisememouploadselect > option, .recipientselect{
+    margin-top: 1%;
+    width: 35%;
+    padding: 1.8%;
+    outline: none;
+    border: 1px solid #E2E2E2;
+    border-radius: 0.5vw;
+}
+.maintexttextarea {
+width: 80%;
+outline: none;
+padding: 2%;
+margin-top: 1%;
+border: 1px solid #E2E2E2;
+border-radius: 0.5vw;
+}
+
+.maintexttextarea::placeholder{
+    color: #A5A5A53C;
+} 
+
+.raisememosubmit{
+    width: 25%;
+    align-self: center;
+    margin-top: 1%;
+    padding: 1%;
+    border: none;
+    color: white;
+    background-color: #D7B321;
+    border: 1px solid #9F810A;
+}
+.raisememosubmit > span {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.raisememosubmit:hover {
+    background-color: #C32131;
+}
