--- a/css/login.css
+++ b/css/login.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
 }
 
+
 .section {
     display: flex;
     height: 100%;
@@ -99,6 +100,7 @@ a:visited {
 }
 
 .text {
+    margin-top: 1vw;
     display: flex;
     flex-direction: row;
 }
@@ -154,7 +156,6 @@ input[type="email"] {
     /* border: 1px solid #d1d5da; */
     box-sizing: border-box;
     border-radius: 0.375rem;
-    color: #24292e;
     margin-top: 10px;
 }
 
@@ -163,14 +164,13 @@ input[type="email"] {
     display: block;
     width: 100%;
     border-radius: 0.375rem;
-    border: 1px solid #f3f3f3;
+    border: 1px solid #A5A5A5;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     margin-top: 2px;
     margin-bottom: 2px;
-    color: #212121;
 }
 
 .appearance-none {
@@ -186,9 +186,9 @@ input[type="email"] {
 
 .email-input:focus {
     z-index: 10;
-    border-color: #3f51b5;
+    border-color: #A5A5A5;
     outline: none;
-    box-shadow: 0 0 0 0.125rem #3f51b5;
+    box-shadow: 0 0 0 0.125rem #A5A5A5;
 }
 
 .password {
@@ -212,7 +212,7 @@ input[type="email"] {
 
 .a-forgot-password {
     font-weight: 500;
-    color: #3880E2;
+    color: #A5A5A5;
 }
 
 .section-password {
@@ -228,10 +228,9 @@ input[type="email"] {
     position: absolute;
     z-index: 10;
     display: block;
-    /* width: 100%; */
     appearance: none;
     border-radius: 0.375rem;
-    border: 1px solid #f3f3f3;
+    border: 1px solid #A5A5A5;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
     padding-top: 0.5rem;
@@ -244,10 +243,10 @@ input[type="email"] {
 
 .password-input:focus {
     z-index: 10;
-    border-color: #3f51b5;
+    border-color: #A5A5A5;
     border: 1px solid;
     outline: none;
-    box-shadow: 0 0 0 0.125rem #3f51b5;
+    box-shadow: 0 0 0 0.125rem #A5A5A5;
 }
 
 ::-webkit-input-placeholder {
