--- a/css/Index.css
+++ b/css/Index.css
@@ -2,18 +2,41 @@
   margin:0;
   padding:0;
 }
+
 .navigation {
-  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 5%;
   display: none;
 }
 
-@media (min-width: 992px) {
+@media screen and (min-width: 768px) and (max-width:1999px) {
   .navigation {
     display: flex;
   }
+  .indexPortalLogin {
+  background-color: #D7B321;
+  color: white;
+  width: 130px !important;
+  height: 30px !important;
+}
+
+.indexnavigationItemsDiv {
+      width: 70% !important;
+  }
+
+}
+
+@media screen and (min-width:1200px){
+  .indexnavigationItemsDiv {
+      width: 50% !;
+  }
+  .navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 5%;
+}
 }
 
 .indexNavigationLogo {
@@ -64,7 +87,7 @@
 
 .overlay {
   width: 100%;
-  height: 34vw;
+  height: 300px;
   display: flex;
   align-items: center;
 }
@@ -78,39 +101,71 @@
   justify-content: space-between;
 }
 
-@media (min-width: 992px) {
-  .heroTextDiv {
-    width: 40%;
-  }
-}
 
 .manageApproval {
   font-weight: bold;
   text-align: start;
+   font-size: 20px;
+   line-height: 140%;
 }
 
-@media (min-width: 1200px) {
+.manageMemos {
+  margin-top: 12px;
+  text-align: start;
+  line-height: 140%;
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+    .manageApproval {
+   font-size: 24px;
+}
+
+.manageMemos {
+  margin-top: 14px;
+  text-align: start;
+}
+}
+
+@media (min-width: 1024px) {
   .manageApproval {
     font-size: 3vw;
+    line-height: 4vw;
   }
-}
 
+   .heroTextDiv {
+    width: 40%;
+  }
+  .overlay {
+  width: 100%;
+  height: 30vw;
+  display: flex;
+  align-items: center;
+}
 .manageMemos {
   margin-top: 2vw;
   text-align: start;
 }
-
-@media (min-width: 992px) {
-  .manageMemos {
-    font-size: 1.3vw;
-    margin-top: 0;
-  }
-}
-
 .freeTrialButton {
   margin-top: 2.3vw;
   width: 40%;
   height: 60px;
+  background: #D7B321;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border: 1px solid #9F810A;  
+
+}
+}
+
+.freeTrialButton {
+  margin-top: 20px;
+  width: 40%;
+  padding: 10px;
   background: #D7B321;
   text-align: center;
   text-decoration: none;
@@ -155,20 +210,24 @@
 }
 
 .bestFeatures {
-  margin-top: 5vh;
+  margin-top: 20px;
   text-align: center;
   color: #D7B321;
   font-weight: bold;
+  font-size: 16px;
+  line-height: 140%;
 }
 
 .discovermore {
   margin-top: 0.3vw;
   text-align: center;
   color: #707070;
+  font-size: 10px;
+  line-height: 140%;
 }
 
 .featurecarddiv {
-  margin-top: 5vw;
+  margin-top: 10px;
   display: flex;
   width: 98%;
   flex-direction: column;
@@ -179,7 +238,7 @@
 
 .feature-card {
   width: 60%;
-  height: 70vw;
+  height: 300px;
   padding: 2%;
   display: flex;
   flex-direction: column;
@@ -190,8 +249,9 @@
 }
 
 .featurecardImg {
-  width: 30%;
-  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
 }
 
 .featureCardHeading {
@@ -207,7 +267,7 @@
   height: 25%;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width:1023px){
   .featurecarddiv {
     flex-direction: row;
     width: 95%;
@@ -215,16 +275,74 @@
     margin-right: auto;
     justify-content: space-between;
     align-items: center;
+     margin-top: 3vw;
   }
+
    .feature-card {
-    width: 30%;
-    height: 36vw;
+    width: 300px;
+    height: 400px;
   }
+  .bestFeatures {
+  font-size: 24px;
+}
+.discovermore {
+  font-size: 16px;
+}
+
+.featurecardImg {
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+}
+
 }
 
 
-@media (min-width: 992px) {
+@media screen and (min-width: 1024px) {
   .featureCardHeading {
+    font-size: 24px;
+  }
+   .featureCardText {
+    font-size: 1.25vw;
+  }
+
+  .featurecardImg {
+  width: 90px;
+  height: 90px;
+  border-radius: 45px;
+}
+ 
+ .bestFeatures {
+    margin-top: 3.4vw;
+    font-size: 24px;
+  }
+  .discovermore {
+    font-size: 16px;
+  }
+   .feature-card {
+    width: 18vw;
+    height: 26.3vw;
+    margin-top: 0;
+  }
+
+    .featurecarddiv {
+    flex-direction: row;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4vw;
+  }
+   .feature-card {
+    width: 20%;
+    height: 27vw;
+  }
+
+}
+
+@media screen and (min-width:1200px){
+   .featureCardHeading {
     font-size: 1.9vw;
   }
    .featureCardText {
@@ -238,12 +356,6 @@
   .discovermore {
     font-size: 1vw;
   }
-   .feature-card {
-    width: 18vw;
-    height: 26.3vw;
-    margin-top: 0;
-  }
-
 }
 
 
@@ -255,8 +367,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top:  30px;
+  padding-bottom: 30px;
   background: #F5F5F5;
 }
 
@@ -311,10 +423,12 @@
   line-height: 3.5vw;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1024px) {
   .aboutWeapproveDiv {
     flex-direction: row;
     justify-content: space-around;
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
 
   .aboutweapproveList{
@@ -400,7 +514,7 @@ button.aboutweapproveFreeTrialButton:hover {
 .pricingdiv{
   display: flex;
   flex-direction: column;
-  padding-bottom: 3%;
+  padding-bottom: 30px;
 }
 
 .chooseaplanheading{
@@ -421,7 +535,7 @@ button.aboutweapproveFreeTrialButton:hover {
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 70%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 3vw;
@@ -446,12 +560,12 @@ button.aboutweapproveFreeTrialButton:hover {
 }
 
 .planDivbreakline{
-    margin-top: 3.3vw;
-    border: 5px solid white;
-    width: 100%;
+    margin-top: 10px;
+    border: 0.5px solid rgb(218, 215, 215);
+    width: 80%;
 }
 .planDivCheckboxs{
-     margin-top: 3.3;
+     margin-top: 15px;
      width: 70%;
 }
 
@@ -460,7 +574,7 @@ button.aboutweapproveFreeTrialButton:hover {
        display: flex;
        justify-content: space-between;
        color: #747474FF;
-       margin-top: 4%;
+       margin-top: 4% !important;
         font-size: 2vw;
         font-weight: 500;
         align-items: center;
@@ -482,16 +596,29 @@ button.aboutweapproveFreeTrialButton:hover {
        border: none;
        cursor: pointer;
 }
-
+ 
 @media (min-width: 768px) {
     .plansDiv {
         flex-direction: row;
          flex-wrap: wrap;
     }
      .planDiv{
-        width: 40%;
-        margin-top: 1%;
+        width: 30%;
+        margin-top: 2%;
+
     }
+    .planDivbreakline{
+    margin-top: 15px;
+    border: 0.5px solid rgb(218, 215, 215);
+    width: 80%;
+}
+.planDivCheckboxs{
+     margin-top: 20px;
+     width: 70%;
+}
+.pricingdiv{
+  padding-bottom: 1%;
+}
 }
 
 @media (min-width: 1024px) {
@@ -516,9 +643,15 @@ button.aboutweapproveFreeTrialButton:hover {
         font-size: 3.4vw;
           margin-top: 2.3vw;
     }
-     /* .planDivbreakline{
-        margin-top: 2.3vw;
-    } */
+     .planDivbreakline{
+    margin-top: 2vw;
+    border: 0.5px solid rgb(218, 215, 215);
+    width: 80%;
+}
+.planDivCheckboxs{
+     margin-top: 3.3vw;
+     width: 70%;
+}
     .planDivCheckboxs{
         margin-top: 2.3vw;
     }
@@ -539,14 +672,14 @@ button.aboutweapproveFreeTrialButton:hover {
 .feedbackDiv {
    --tw-bg-opacity: 1;
     background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-    padding-top: 3.4vw;
-    padding-bottom: 3.4vw;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
      padding-left: 5%;
     padding-right: 5%;    
     --tw-bg-opacity: 1;
-      height: auto;
+    height: auto;
     overflow: hidden;
 }
 
@@ -562,7 +695,7 @@ button.aboutweapproveFreeTrialButton:hover {
      width: 80vw;
      margin-left: auto;
      margin-right: auto;
-
+     margin-top: 20px;
 }
 .feedbackcustomerwordsHeading{
    font-size: 3.9vw;
@@ -602,7 +735,7 @@ button.aboutweapproveFreeTrialButton:hover {
 }
 
 .feedbackcustomerbtndiv{
-      margin-top: 1vw;
+      margin-top: 10px;
 }
 .feedbackcustomerbtn{
      --tw-bg-opacity: 1;
@@ -624,7 +757,10 @@ button.aboutweapproveFreeTrialButton:hover {
 @media (min-width: 768px) {
     .feedbackDiv {
         margin-top: 5vw;
+        padding-top: 3.4vw;
+        padding-bottom: 3.4vw;
     }
+     
      .feedbackDiv {
         flex-direction: row;
     }
@@ -634,6 +770,9 @@ button.aboutweapproveFreeTrialButton:hover {
       .feedbackcustomerdiv{
         flex-direction: row;
     }
+    .feedbackcustomerwordsDiv{
+     margin-top: 0;
+}
 }
 
 @media (min-width: 1024px) {
@@ -672,6 +811,8 @@ button.aboutweapproveFreeTrialButton:hover {
     }
 }
 
+/* footer */
+
 .footerdiv{
    display: flex;
    align-items: center;
@@ -679,6 +820,7 @@ button.aboutweapproveFreeTrialButton:hover {
    height: auto;
     --tw-bg-opacity: 1;
     background-color: rgb(69 69 69 / var(--tw-bg-opacity));
+    padding:20px 0;
 }
 
 .footerinnerdiv{
@@ -731,13 +873,13 @@ button.aboutweapproveFreeTrialButton:hover {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.footerthirddiv{
-    width: 60%;
-     display: flex;
-      flex-direction: column;
-        height: 60%;
-         margin-top: 2vh;
-           justify-content: space-between;
+.footerthirddiV{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  height: 60%;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 .footerthirddivhead{
       font-size: 20px;
@@ -755,7 +897,7 @@ button.aboutweapproveFreeTrialButton:hover {
    display: flex;
      width: 40%;
     flex-direction: column;
-      margin-top: 2vh;
+      margin-top: 30px;
        justify-content: space-between;
 }
 
@@ -832,7 +974,7 @@ button.aboutweapproveFreeTrialButton:hover {
     .footerseconddivlist {
         font-size: 18px;
     }
-     .footerthirddiv {
+     .footerthirddiV {
         width: 40%;
          margin-top: 0px;
         
@@ -840,8 +982,9 @@ button.aboutweapproveFreeTrialButton:hover {
     .footerthirddivparagraph{
         font-size: 15px;
     }
-     .footerfourthdiv {
+     .footerfourthdiv{
         width: 30%;
+        margin-top: 50px;
     }
     .footerfourthdivparagraph {
         font-size: 15px;
@@ -876,7 +1019,7 @@ button.aboutweapproveFreeTrialButton:hover {
           height: 90%;
           
     }
-    .footerthirddiv {
+    .footerthirddiV{
         width: 30%;      
     }
      .footerfourthdiv {
