--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,8 @@
 body{
     display: flex;
     background-color: #F8F8F8;
+    padding: 0;
+    margin: 0;
 }
 .nav-container {
     width: 18.8vw;
@@ -31,18 +33,19 @@ body{
 }
 
 .logo {
-    width: 70%;
-    margin-top: 2.5vw;
+    width: 40%;
+    margin-top: 20px;
     align-self: center;
 }
 .nav-links {
     display: flex;
     flex-direction: column;
-    margin-top: 3vw;
+    margin-top: 45px;
     width: 70%;
     align-self: center;
     height:60%;
 }
+
 .link {
     color: #707070;
 }
@@ -61,13 +64,13 @@ body{
     padding-left: 5%;
     height: 8vh;
     border-radius: 0.2vw;
-    font-size: 0.9vw;
+    font-size: 12px;
     margin-bottom: 3%;
     color: #707070;
 }
 
 .fa-solid {
-    font-size: 1.22vw;
+    font-size: 15px;
     /* border: 1px solid; */
 }
 
@@ -77,22 +80,166 @@ body{
     color: #707070;
 }
 
-@media (min-width: 992px) {
-    .nav-container {
-        display: flex;
-        visibility: visible;
-    }
+
+.mobilenav-container {
+  height: 100vh;
+  width: 70vw;
+  box-shadow: 3px 0px 10px #00000029;
+  position: fixed;
+  left: -100%;
+z-index: 20 !important;
+transition:  0.5s ease-in-out;
+background-color: #fff !important;
+
+}
+.mobilenav-containeractive {
+  height: 100vh;
+  width: 70vw;
+  box-shadow: 3px 0px 10px #00000029 !important;
+  position: fixed;
+  left: 0;
+  transition:  0.5s ease-in-out;
+  z-index: 20 !important;
+  background-color: #fff !important;
+}
+
+
+.mobilenavlogodiv{
+    display: flex;
+    align-items: center;
+    height: 30px;
+    z-index: 30 !important;
+    padding: 1% 5%;
+    top:1%;
+    position: absolute;
+}
+
+.mobilenavlogodiv > .fa-solid {
+    align-self: center;
+    font-size: 20px;
+    z-index: 30 !important;
+    cursor: pointer;
+}
+
+.mobilelogo{
+    width: 50%;
+    margin-left: 30%;
+    z-index: 30 !important;
 }
 
 
 
+/* md breakpoint */
+
+@media screen and (min-width:600px) and (max-width:1023px){
+    .mobilenav-container {
+  height: 100vh;
+  width: 400px;
+  box-shadow: 3px 0px 10px #00000029;
+   position: fixed;
+  left: -100%;
+}
+    .mobilenav-containeractive {
+  height: 100vh;
+  width: 400px;
+  box-shadow: 3px 0px 10px #00000029;
+  position: fixed;
+  left: 0;
+  
+}
+.nav-links {
+    margin-top:55px;
+}
+
+.mobilenavlogodiv{
+   top:1%;
+}
+
+.mobilenavlogodiv > .fa-solid {
+    font-size: 30px;
+    z-index: 30 !important;
+}
+.navitemsdiv {
+    font-size: 20px;
+}
+
+}
+
+
+/* lg upward breakpoint */
+@media screen and (min-width:1024px) { 
+    .nav-container {
+        display: flex;
+        visibility: visible;
+    }
+.mobilenav-container {
+  display: none;
+}
+.navitemsdiv {
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    padding-left: 5%;
+    height: 8vh;
+    border-radius: 0.2vw;
+    font-size: 1.2vw;
+    margin-bottom: 3%;
+    color: #707070;
+}
+.logo {
+    width: 70%;
+    margin-top: 2.5vw;
+    align-self: center;
+}
+
+.nav-links{
+    width: 90%;
+    margin-top: 3vw;
+}
+.mobilenavlogodiv{
+    display: none;
+}
+}
+
+/* big screen */
+@media screen and (min-width:1200px){
+    .fa-solid {
+    font-size: 1.22vw;
+    /* border: 1px solid; */
+}
+.navitemsdiv {
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    padding-left: 5%;
+    height: 8vh;
+    border-radius: 0.2vw;
+    font-size: 0.9vw;
+    margin-bottom: 3%;
+    color: #707070;
+}
+.nav-links{
+    width: 70%;
+}
+}
+
+/* dropdown menu */
+.dropdownDiv {
+    position: absolute;
+    top: 1vw !important;
+    right: 2vw;
+}
+
  .dropdown {
     position: relative;
     display: inline-block;
+    width: 120px;
+    height: 40px;
  }
 
  .visibledropdown{
     background-color: white !important;
+    padding: 15px 5px;
  }
 
 .dropdown-toggle {
@@ -105,17 +252,18 @@ body{
     top: 100%;
     left: 0;
     z-index: 1;
+    width: 100%;
     display: none;
     background-color: #fff;
     border: 1px solid #aaa;
 }
 
-.dropdown-item {
+/* .dropdown-item {
     padding: 10px;
     display: flex;
     align-items: center;
     cursor: pointer;
-}
+} */
 
 .dropdown-item img {
     width: 20px;
@@ -124,16 +272,7 @@ body{
 }
 
 /* drop down menu */
-.dropdownDiv {
-    position: absolute;
-    top: 1.7vw;
-    right: 7.3vw;
-}
 
-.dropdown {
-    width: 14.5vw;
-    height: 3.1vw;
-}
 
 .visibledropdown {
     display: flex;
@@ -151,7 +290,7 @@ body{
 }
 
 .userName {
-    font-size: 1vw;
+    font-size: 12px;
     font-weight: bold;
     color: #707070;
 }
@@ -159,18 +298,54 @@ body{
 .dropdown-toggle {
     font-weight: 900;
     border: none;
-    background-color: white;
 }
 
 .dropdown-menu {
     width: 100%;
+    padding: 0 !important;
+    border-radius: 0 !important;
 }
 
-.dropdown-item {
+.dropdown-item { 
+    font-size: 10px; 
+    padding: 5% 7%;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .dropdown-item img {
-    margin-right: 8px;
+    margin-right: 5%;
+}
+
+@media screen and (min-width:600px) {
+    .dropdownDiv {
+    position: absolute;
+    top: 1.7vw;
+    right: 7.3vw;
+}
+         .dropdown {
+    width: 200px;
+    height: 3.1vw;
+}
+.userName, .dropdown-item {
+    font-size: 14px;
+}
+}
+
+@media screen and (min-width:600px) and (max-width:950px) {
+   .dropdown-menu {
+    top: 130%;
+   }
+}
+
+
+@media screen and (min-width:1200px) {
+       .dropdown {
+    width: 14.5vw;
+    height: 3.1vw;
+}
+.userName, .dropdown-item {
+    font-size: 1vw;
+}
 }
